--- a/wp-content/themes/environics/assets/sass/elements/_buttons.scss
+++ b/wp-content/themes/environics/assets/sass/elements/_buttons.scss
@@ -260,6 +260,14 @@ h1 .btn.barr {
 		bottom: -0.5rem;
 	}
 
+	.jobs-container h4.barr:after {
+		bottom: -0.7rem;
+	}
+
+	.tile-content.barr:after {
+		bottom: 0.5rem;
+	}
+
 	.tile-inner h4.barr:after {
 		bottom: 0;
 	}
