--- a/wp-content/themes/environics/assets/sass/site/_media-queries.scss
+++ b/wp-content/themes/environics/assets/sass/site/_media-queries.scss
@@ -46,7 +46,7 @@
 			height: 44rem;
 		}
 
-		.text-container {
+		.text-container, .capabilities-text {
 			display: block;
 			padding: 4rem 1rem;
 			@include border-bottom;
@@ -61,13 +61,18 @@
 			}
 		}
 
+		.capabilities-text {
+			border-bottom: none;
+		}
+
 		.capabilities-container {
-			padding: 4rem 0 0 0;
+			padding: 0;
 			@include border-bottom;
 
 			.span_11 {
 				margin-bottom: 3rem;
-				padding: 1rem;
+				margin-top: 0;
+				padding: 0;
 			}
 
 			.featured {
@@ -91,8 +96,9 @@
 			padding: 4rem 0;
 			@include border-bottom;
 
-			.span_6 {
+			p.span_6 {
 				margin-top: 0;
+				margin-bottom: 3rem;
 			}
 		}
 
@@ -118,7 +124,7 @@
 
 		h4 {
 			position: absolute;
-			top: 8rem;
+			top: 6rem;
 			padding: 0 2rem;
 			color: white;
 		}
@@ -777,14 +783,26 @@
 
 		.blog-item {
 			height: auto !important;
+			background: $mediumpurple;
 		}
 
 		.posts-container .blog-item-img.no-image {
-			height: auto !important;
+			// height: auto !important;
 
 			.tile-inner {
 				position: static;
 				transform: none;
+			}
+		}
+
+		.posts-container {
+
+			.blog-item-img {
+				height: auto !important;
+			}
+			.tile-inner {
+				position: relative;
+				top: 0;
 			}
 		}
 	}
